--- a/.github/workflows/bitcoin.yml
+++ b/.github/workflows/bitcoin.yml
@@ -2,8 +2,8 @@ name: Update Bitcoin Audio
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # רץ כל 5 דקות
-  workflow_dispatch:       # מאפשר הרצה ידנית בלחיצה
+    - cron: '*/5 * * * *'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -20,11 +20,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
         pip install -r requirements.txt
-
-    - name: Install ffmpeg
-      run: sudo apt-get update && sudo apt-get install -y ffmpeg
 
     - name: Run script
       run: python bitcoin_update_upload.py
